
 History

 __.__.____: v5.87

 - fixed regression in v5.86: exceptions in PL0 were displayed incorrectly.
 - fixed: NMIs that occured while no full client region was setup caused
   a crash.

 25.01.2026: v5.86
 - service table: added control proc member to allow Jemm to call out on
   certain events; currently "device_reboot_notify" is the only call-out.
 - service table: added v86faults member - allows programs to hook into
   v86 faults; used by JLOAD.
 - Simulate_Int: call an installed v86 hook proc before running the INT.
 - JemmEx, XMS AH=0Eh: invalid handle error returned if size > 65535 kB;
   this is MS Himem compatible.
 - JLMs Reboot & FastBoot added.
 - fixed debug displays in 16-bit part.
 - fixed debug displays in Jemm16.asm, UnloadJemm.
 - JemmEx: option NOE820 reintroduced; it's a noop unless MAXSEXT is 0.
 - fixed option UNLOAD: on 80386/80486 cpus, it wasn't safe.
 - JLM QPIEmu: added function ax=5000h.
 - reintroduced compatibility with SB emulation drivers SB(E)INIT for SB PCI
   cards by extending functionality of cmdline option SB.
 - NMI stability increased.

 10.01.2025: v5.85
 - fixed: VDS func ax=810Ch: set ZF if disable cnt reaches zero.
 - fixed: VDS: added several argument checks ( mostly DX ).
 - fixed: ISA DMA ports 000A-000F must be handled by Jemm to detect FD accesss
   even if external handler has trapped these ports.
 - fixed: it was assumed that value for TR to be loaded in VCPI function
   ax=DE0Ch ( switch from v86- to protected-mode) had bits 0-2 cleared.
 - linear address region 110000-3FFFFF is now only mapped as far as needed by
   the monitor program (looses SB(E)INIT compatibility).
 - optional kernel-debugger-aware variant calls int 68h for deinitialization.
 - cmdline switch NOVMW added.
 - easier log displays via macro @dprintf.
 - log displays redirected to kernel debugger if one has been detected.
 - buffered output of log displays removed.