@@ -6,6 +6,8 @@
  - fixed regression in v5.86: exceptions in PL0 were displayed incorrectly.
  - fixed: NMIs that occured while no full client region was setup caused
    a crash.
+ - segment registers DS/ES/FS/GS and [CS:IP] now also displayed for PL0
+   exceptions.
 
  25.01.2026: v5.86
  - service table: added control proc member to allow Jemm to call out on
